Bugfx: team image size changed on mobile to ensure good display

--- a/assets/sass/pages/_team.scss
+++ b/assets/sass/pages/_team.scss
@@ -64,7 +64,7 @@
 
 @media (max-width: 575px) {
     .team__img {
-        width: 400px;
+        width: 300px;
     }
 }
 
